STDOUT buffering in non-verbose mode. More verbosity levels. Logger speedup. Custom config for profiler script.

--- a/dklab_realplexor.conf
+++ b/dklab_realplexor.conf
@@ -93,11 +93,12 @@
 	# Is debug mode enabled for JS?
 	JS_DEBUG => 1,
 	
-	# Debug output verbosity:
-	# 0: totally silent
-	# 1: show messages only
-	# 2: show messages and storage statistics
-	VERBOSITY => 2,
+	# Debug output verbosity (decrease to speedup):
+	# 0: totally silent, fastest mode
+	# 1: show messages only, without timestamps
+	# 2: show messages only, with timestamps
+	# 3: show messages, timestamps and storage statistics
+	VERBOSITY => 3,
 );
 
 return 1;
