New version - v1.31   - [BUG] Perl does not call flush() automatically before socket shutdown(). It     sometimes (unstable!) causes unexpected SIGPIPEs and data loss. Fixed: now flush()     is called manually.   - [BUG] STATS command is not processed twice anymore.   - [NEW] Ability to limit memory usage and auto-restart the daemon if it     consumes too much memory. (Note that unsent data is lost during this restart.)   - [NEW} PHP API: cmdOnlineWithCounters(): for each online ID also returns     the number of browsers connected just now (it is NOT a "number of online     users who listen this channel", but its approximation).

--- a/dklab_realplexor.conf
+++ b/dklab_realplexor.conf
@@ -99,6 +99,10 @@
 	# 2: show messages only, with timestamps
 	# 3: show messages, timestamps and storage statistics
 	VERBOSITY => 3,
+	
+	# If a realplexor daemon consumes more memory than specified here,
+	# it is cruelly restarted. Specify 0 to disable restarting.
+	MAX_MEM_MB => 0,
 );
 
 return 1;
