ID_BINDINGS_SERVERS config option

--- a/dklab_realplexor.conf
+++ b/dklab_realplexor.conf
@@ -34,6 +34,14 @@
 		'127.0.0.1:10010'
 	],
 	
+	# Memcached online notification servers.
+	ID_BINDINGS_SERVERS => [
+		'127.0.0.1:11211'
+	],
+	
+	# Hostname of the current server.
+	ID_BINDINGS_SERVER_NAME => "default",
+		
 	# How much events (e.g. online/offline changes) to hold in each
 	# of 3 event chains accessible via WATCH cmd.
 	EVENT_CHAIN_LEN => 1000,
