--- a/t/servertest/fixture/iframe_stub.conf
+++ b/t/servertest/fixture/iframe_stub.conf
@@ -2,5 +2,6 @@ use File::Basename;
 use Cwd 'abs_path';
 
 $CONFIG{IFRAME_FILE} = dirname(abs_path(__FILE__)) . "/iframe_stub.html";
+$CONFIG{CHARSET} = "utf-8";
 
 return 1;
