--- a/t/servertest/fixture/script_stub.conf
+++ b/t/servertest/fixture/script_stub.conf
@@ -2,5 +2,6 @@ use File::Basename;
 use Cwd 'abs_path';
 
 $CONFIG{SCRIPT_FILE} = dirname(abs_path(__FILE__)) . "/script_stub.js";
+$CONFIG{CHARSET} = "utf-8";
 
 return 1;
